@@ -1,0 +1,7 @@
+
+#ifdef 0
+#define debugC debug
+#else
+inline void debugC(const char *,...) {};
+#endif
+
