@@ -85,7 +85,7 @@ void KFilePreview::setCurrentItem(const char *item, const KFileInfo *i)
 {
     if (item != 0) {
 	i = 0;
-	debug("setCurrentItem %s",item);
+	debugC("setCurrentItem %s",item);
 	for (uint j = 0; j < count(); j++)
 	    if (at(j)->fileName() == item)
 		i = at(j);
